--- a/style.css
+++ b/style.css
@@ -3,3 +3,11 @@ color: purple;
 background-color: royalblue;
 
 }
+
+.moja{
+    border: 10px;
+    border-radius: 5px;
+    margin: auto;
+    padding: 0;
+    display: block;
+}
