--- a/style.css
+++ b/style.css
@@ -11,3 +11,9 @@ background-color: royalblue;
     padding: 0;
     display: block;
 }
+h1, h2, h3{
+    text-align: center;
+}
+p{
+    text-align: justify;
+}
