--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body{
 color: purple;
 background-color: royalblue;
+margin-left: 20px;
+margin-right: 20px;
+margin-top: 15px;
+margin-bottom: 15px;
 
 }
 
