--- a/style.css
+++ b/style.css
@@ -7,10 +7,7 @@ body{
 border:5px solid red;
 color: purple;
 background-color: royalblue;
-margin-left: 100px;
-margin-right: 150px;
-margin-top: 50px;
-margin-bottom: 50px;
+margin: 80%;
 
 }
 
